--- a/.github/workflows/regenerate-readme.yml
+++ b/.github/workflows/regenerate-readme.yml
@@ -1,11 +1,12 @@
-name: Refresh
+name: Regenerate README file
 
 on:
   push:
     branches:
       - master
   schedule:
-    - cron:  '0 1 * * *' # Run every day at 1am UTC.
+    # https://crontab.guru/every-night-at-midnight
+    - cron:  '0 0 * * *'
 
 jobs:
 
@@ -16,36 +17,31 @@ jobs:
       - name: Check out source code
         uses: actions/checkout@v2
 
-      - name: Check existence of composer.json file
-        id: check_files
-        uses: andstor/file-existence-action@v1
-        with:
-          files: "composer.json, phpunit.xml.dist"
-
       - name: Set up PHP envirnoment
         uses: shivammathur/setup-php@v2
         with:
           php-version: '7.4'
-          tools: cs2pr
 
-      - name: Get Composer cache Directory
-        if: steps.check_files.outputs.files_exists == 'true'
-        id: composer-cache
+      - name: Configure git user
         run: |
-          echo "::set-output name=dir::$(composer config cache-files-dir)"
+          git config --global user.email "alain.schlesser@gmail.com"
+          git config --global user.name "Alain Schlesser"
 
-      - name: Use Composer cache
-        if: steps.check_files.outputs.files_exists == 'true'
-        uses: actions/cache@master
-        with:
-          path: ${{ steps['composer-cache'].outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
+      - name: Check if remote branch exists
+        id: remote-branch
+        run: echo ::set-output name=exists::$([[ -z $(git ls-remote --heads origin sync-spec-test-suite) ]] && echo "0" || echo "1")
 
-      - name: Install dependencies
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: COMPOSER_ROOT_VERSION=dev-master composer install --prefer-dist --no-progress --no-suggest
+      - name: Create branch to base pull request on
+        if: steps.remote-branch.outputs.exists == 0
+        run: |
+          git checkout -b sync-spec-test-suite
+
+      - name: Fetch existing branch to add commits to
+        if: steps.remote-branch.outputs.exists == 1
+        run: |
+          git fetch --all --prune
+          git checkout sync-spec-test-suite
+          git pull --no-rebase
 
       - name: Install WP-CLI
         run: |
@@ -61,44 +57,27 @@ jobs:
         run: |
           wp scaffold-package --readme --force .
 
-      - name: Get current time
-          uses: 1466587594/get-current-time@v1
-          id: current-date
-          with:
-            format: YYYY-MM-DD
-
-      - name: Use current time
-        env:
-          TIME: "${{ steps.current-time.outputs.time }}"
-          F_TIME: "${{ steps.current-time.outputs.formattedTime }}"
-        run: echo $TIME $F_TIME
-
-      - name: Create git branch
-        env:
-          DATE: "${{ steps['current-date']outputs.formattedTime }}"
-        run: |
-          git checkout -b refresh-readme-$DATE
-
-      - name: Stage changes
-        run: |
-          git add README.md
+      - name: Check if there are changes
+        id: changes
+        run: echo ::set-output name=changed::$([[ -z $(git status --porcelain) ]] && echo "0" || echo "1")
 
       - name: Commit changes
+        if: steps.changes.outputs.changed == 1
         run: |
-          git commit -m 'Refresh README.md file'
+          git add --all .
+          git commit -m "Regenerate README file - $(date +'%Y-%m-%d')"
+          git push origin sync-spec-test-suite
 
-      - name: Push changes into remote branch
-        env:
-          DATE: "${{ steps.current-date.outputs.formattedTime }}"
-        run: |
-          git push -u origin refresh-readme-$DATE
-
-      - name: Create pull-request
+      - name: Create pull request
+        if: |
+          steps.changes.outputs.changed == 1 &&
+          steps.remote-branch.outputs.exists == 0
         uses: repo-sync/pull-request@v2
         with:
-          source_branch: "refresh-readme-${{ steps['current-date'].outputs.formattedTime }}"
-          destination_branch: "master"
-          pr_title: "Refresh `README.md` file"
-          pr_body: "**This is an automated pull-request**\n\nRefreshes the `README.md` file with the latest changes to the docblocks in the source code."
-          pr_label: "scope:documentation"
+          source_branch: regenerate-readme
+          destination_branch: master
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_title: Regenerate README file
+          pr_body: "**This is an automated pull-request**\n\nRefreshes the `README.md` file with the latest changes to the docblocks in the source code."
+          pr_reviewer: schlessera
+          pr_label: scope:documentation
