--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,18 @@
         "php": "^5.6 || ^7.0 || ^8.0",
         "ext-curl": "*",
         "mustache/mustache": "~2.13",
-        "rmccue/requests": "~1.6",
+        "rmccue/requests": "^1.8",
         "symfony/finder": ">2.7",
         "wp-cli/mustangostang-spyc": "^0.6.3",
-        "wp-cli/php-cli-tools": "~0.11.2",
-        "wp-cli/wp-cli-tests": "^3.0.7"
+        "wp-cli/php-cli-tools": "~0.11.2"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
         "wp-cli/db-command": "^1.3 || ^2",
         "wp-cli/entity-command": "^1.2 || ^2",
         "wp-cli/extension-command": "^1.1 || ^2",
-        "wp-cli/package-command": "^1 || ^2"
+        "wp-cli/package-command": "^1 || ^2",
+        "wp-cli/wp-cli-tests": "^3.0.7"
     },
     "suggest": {
         "ext-readline": "Include for a better --prompt implementation",
