--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": "^5.6 || ^7.0 || ^8.0",
         "ext-curl": "*",
-        "mustache/mustache": "dev-fix/trim-php-8.1 as v2.13.1",
+        "mustache/mustache": "dev-fix/trim-php-8.1 as 2.13.1",
         "rmccue/requests": "^1.8",
         "symfony/finder": ">2.7",
         "wp-cli/mustangostang-spyc": "^0.6.3",
